[gd_scene load_steps=6 format=2]

[ext_resource path="res://Itim/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ColorRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/TrainingMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 1 )

[node name="TrainingMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" parent="." instance=ExtResource( 2 )]
margin_left = -4.22729
margin_top = -5.72247
margin_right = 1080.77
margin_bottom = 1918.28

[node name="Label" type="Label" parent="."]
margin_left = 190.408
margin_top = 124.809
margin_right = 854.408
margin_bottom = 308.809
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.960784, 0.945098, 0.0156863, 1 )
text = "training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DodgeTrainingButton" type="Button" parent="."]
margin_left = 87.6034
margin_top = 493.947
margin_right = 1326.6
margin_bottom = 729.947
rect_scale = Vector2( 0.734996, 0.854623 )
custom_fonts/font = SubResource( 2 )
text = "dodge training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightingTrainingButton2" type="Button" parent="."]
margin_left = 88.4263
margin_top = 773.17
margin_right = 1491.43
margin_bottom = 1009.17
rect_scale = Vector2( 0.64747, 0.792924 )
custom_fonts/font = SubResource( 2 )
text = "fighting training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 54.6892
margin_top = 1675.34
margin_right = 688.689
margin_bottom = 1886.34
rect_scale = Vector2( 0.734996, 0.854623 )
custom_fonts/font = SubResource( 2 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DodgeTrainingButton" to="." method="_on_DodgeTrainingButton_pressed"]
[connection signal="pressed" from="FightingTrainingButton2" to="." method="_on_FightingTrainingButton2_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
